Registration and update done
Registration and update of actors done
Controllers for Message done.
Only views needed for message: list and display

--- a/Acme-Conference/src/main/webapp/views/actor/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/actor/messages.properties
@@ -27,3 +27,5 @@ actor.signUp.author = Author
 actor.signUp.reviewer = Reviewer
 actor.signUp.administrator = Administrator
 actor.commit.error = Cannot commit operation
+
+actor.back.welcome = Back
