--- a/Acme-Conference/src/main/webapp/views/actor/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/actor/messages_es.properties
@@ -27,3 +27,5 @@ actor.signUp.author = Autor
 actor.signUp.reviewer = Revisor
 actor.signUp.administrator = Administrador
 actor.commit.error = No se puede completar la acción
+
+actor.back.welcome = Atrás
