--- a/Acme-Conference/src/main/webapp/views/administrator/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/administrator/messages.properties
@@ -6,5 +6,13 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-administrator.action.1	= This is the administrator's action 1
-administrator.action.2	= This is the administrator's action 2
+author.alias = Author's alias
+
+paper.list = Paper list
+registration.list = Registrations list
+submission.list = Submissions list
+activity.list = Activities list
+conference.list = Conferences list
+creditcard.list = Creditcards list
+
+author.back.welcome = Back
