--- a/Acme-Conference/src/main/webapp/views/administrator/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/administrator/messages_es.properties
@@ -6,5 +6,13 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-administrator.action.1	= Esta es la acción 1 del administrador
-administrator.action.2	= Esta es la acción 2 del administrador
+author.alias = Alias del autor
+
+paper.list = Lista de documentos
+registration.list = Lista de registros
+submission.list = Lista de propuestas
+activity.list = Lista de actividades
+conference.list = Lista de conferencias
+creditcard.list = Lista de tarjetas de crédito
+
+author.back.welcome = Atrás
