--- a/Acme-Conference/src/main/webapp/views/reviewer/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/reviewer/messages.properties
@@ -6,5 +6,6 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-customer.action.1	= This is the customer's action 1
-customer.action.2	= This is the customer's action 2
+reviewer.expertise = Reviewer's expertise
+
+report.list = Reports list
