--- a/Acme-Conference/src/main/webapp/views/reviewer/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/reviewer/messages_es.properties
@@ -6,5 +6,6 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-customer.action.1	= Esta es la acción 1 del cliente
-customer.action.2	= Esta es la acción 2 del cliente
+reviewer.expertise = Maestría del revisor
+
+report.list = Lista de informes
