--- a/Acme-Conference/src/main/webapp/views/message/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/message/messages.properties
@@ -6,11 +6,13 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-author.alias = Author's alias
+message.subject = Subject
+message.body = Body
+message.sender = From
+message.recipients = To
+message.topics = Topics
+message.topic = Topic
+message.messages = Messages
 
-paper.list = Paper list
-registration.list = Registrations list
-submission.list = Submissions list
-activity.list = Activities list
-conference.list = Conferences list
-creditcard.list = Creditcards list
+message.reply = Reply
+message.back = Back
