--- a/Acme-Conference/src/main/webapp/views/message/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/message/messages_es.properties
@@ -6,11 +6,14 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-author.alias = Alias del autor
+message.subject = Asunto
+message.body = Cuerpo
+message.sender = De
+message.recipients = A
+message.topics = Temas
+message.topic = Tema
+message.messages = Mensajes
 
-paper.list = Lista de documentos
-registration.list = Lista de registros
-submission.list = Lista de propuestas
-activity.list = Lista de actividades
-conference.list = Lista de conferencias
-creditcard.list = Lista de tarjetas de crédito
+
+message.reply = Responder
+message.back = Atrás
