--- a/Acme-Conference/src/main/webapp/views/conference/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages.properties
@@ -19,6 +19,7 @@ message.back = Back
 
 
 conference.title = Title
+conference.acronym = Acronym
 conference.venue = Venue
 conference.description = Description
 conference.startDate= Start Date
@@ -31,3 +32,8 @@ conference.filter= Filter
 conference.edit =  Edit
 conference.create = Create
 conference.back = Back
+
+conference.submission5Days= Filter the ones with their submission deadline elapsed in the last 5 days.
+conference.notification5Days = Filter the ones witch its notification deadline will elapse in 5 days or less.
+conference.cameraReady5Days = Filter the ones witch its camera-ready deadline will elapse in 5 days or less.
+conference.organised5Days = Filter the ones that are going to be organised in less than 5 days.
