--- a/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
@@ -19,6 +19,7 @@ message.reply = Responder
 message.back = Atrás
 
 conference.title = Titulo
+conference.acronym = Acrónimo
 conference.venue = Lugar
 conference.description = Descripción
 conference.startDate= Fecha de Estreno
@@ -31,3 +32,8 @@ conference.filter= Filtrar
 conference.edit =  Editar
 conference.create = Crear
 conference.back = Atrás
+
+conference.submission5Days= Filtrar aquellas cuya fecha de presentación transcurrió en los últimos 5 días.
+conference.notification5Days = Filtrar aquellas cuya fecha de notificación transcurrirán  en los próximos 5 días.
+conference.cameraReady5Days =  Filtrar aquellas cuya fecha de cámara preparada transcurrirán  en los próximos 5 días.
+conference.organised5Days = Filtrar aquellas que van a ser organizadas en los próximos 5 días.
