--- a/Acme-Conference/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages.properties
@@ -23,3 +23,4 @@ master.page.login 					= Login
 master.page.logout 					= Logout
 
 master.page.conferences = Conferences 
+master.page.admin.conferences = Manage conferences
