--- a/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
@@ -23,3 +23,4 @@ master.page.login 					= Entrar
 master.page.logout 					= Salir
 
 master.page.conferences = Conferencias
+master.page.admin.conferences = Administrar conferences
