Create Conference(Por arreglar)
Hay un bug de converters que aun no se que es

--- a/Acme-Conference/src/main/webapp/views/conference/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages.properties
@@ -6,24 +6,22 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-message.subject = Subject
-message.body = Body
-message.sender = From
-message.recipients = To
-message.topics = Topics
-message.topic = Topic
-message.messages = Messages
-
-message.reply = Reply
-message.back = Back
 
 
+conference.save = Save
+conference.cancel = Back
 conference.title = Title
 conference.acronym = Acronym
 conference.venue = Venue
 conference.description = Description
+conference.submissionDeadline = Submission Deadline
+conference.notificationDeadline = Notification Deadline
+conference.cameraReadyDeadline = Camera-Ready Deadline
 conference.startDate= Start Date
 conference.endDate = End Date
+conference.summary = Summary
+conference.fee = Fee
+conference.isFinal = ¿Is in final mode?
 conference.filter.all = All
 conference.filter.forthcoming = Forthcoming
 conference.filter.past = Past
@@ -32,6 +30,8 @@ conference.filter= Filter
 conference.edit =  Edit
 conference.create = Create
 conference.back = Back
+conference.yes = Yes
+conference.no = No
 
 conference.submission5Days= Filter the ones with their submission deadline elapsed in the last 5 days.
 conference.notification5Days = Filter the ones witch its notification deadline will elapse in 5 days or less.
