--- a/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
@@ -6,24 +6,20 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-message.subject = Asunto
-message.body = Cuerpo
-message.sender = De
-message.recipients = A
-message.topics = Temas
-message.topic = Tema
-message.messages = Mensajes
-
-
-message.reply = Responder
-message.back = Atrás
-
+conference.save = Guardar
+conference.cancel = Atrás
 conference.title = Titulo
 conference.acronym = Acrónimo
 conference.venue = Lugar
 conference.description = Descripción
+conference.submissionDeadline = Fecha de presentación
+conference.notificationDeadline = Fecha de notificación
+conference.cameraReadyDeadline = Fecha de publicación
 conference.startDate= Fecha de Estreno
 conference.endDate = Fecha de Fin
+conference.summary = Resumen
+conference.fee = Cuota
+conference.isFinal = ¿Está en modo final?
 conference.filter.all = Todas
 conference.filter.forthcoming = Próximas
 conference.filter.past = Pasadas
@@ -32,8 +28,10 @@ conference.filter= Filtrar
 conference.edit =  Editar
 conference.create = Crear
 conference.back = Atrás
+conference.yes = Si
+conference.no = No
 
 conference.submission5Days= Filtrar aquellas cuya fecha de presentación transcurrió en los últimos 5 días.
 conference.notification5Days = Filtrar aquellas cuya fecha de notificación transcurrirán  en los próximos 5 días.
-conference.cameraReady5Days =  Filtrar aquellas cuya fecha de cámara preparada transcurrirán  en los próximos 5 días.
+conference.cameraReady5Days =  Filtrar aquellas cuya fecha de publicación transcurrirán  en los próximos 5 días.
 conference.organised5Days = Filtrar aquellas que van a ser organizadas en los próximos 5 días.
