--- a/Acme-Conference/src/main/webapp/views/conference/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages.properties
@@ -6,13 +6,12 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-
-
 conference.save = Save
 conference.cancel = Back
 conference.title = Title
 conference.acronym = Acronym
 conference.venue = Venue
+conference.summary = Summary
 conference.description = Description
 conference.submissionDeadline = Submission Deadline
 conference.notificationDeadline = Notification Deadline
@@ -32,8 +31,14 @@ conference.create = Create
 conference.back = Back
 conference.yes = Yes
 conference.no = No
-
+conference.commit.error = Commit Error
 conference.submission5Days= Filter the ones with their submission deadline elapsed in the last 5 days.
 conference.notification5Days = Filter the ones witch its notification deadline will elapse in 5 days or less.
 conference.cameraReady5Days = Filter the ones witch its camera-ready deadline will elapse in 5 days or less.
 conference.organised5Days = Filter the ones that are going to be organised in less than 5 days.
+
+
+conference.form.error.submissionDeadline = The Submission Deadline must be before the notification deadline, before the camera-ready Deadline , before the start date and before the endDate
+conference.form.error.notificationDeadline = The notification Deadline must be before the camera-ready deadline, before the startDate and before the endDate
+conference.form.error.cameraReadyDeadline = The Camera-Ready Deadline must be before the startDate and before the endDate
+conference.form.error.startDate =  The startDate must be before the endDate
