--- a/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
@@ -11,6 +11,7 @@ conference.cancel = Atrás
 conference.title = Titulo
 conference.acronym = Acrónimo
 conference.venue = Lugar
+conference.summary = Resumen
 conference.description = Descripción
 conference.submissionDeadline = Fecha de presentación
 conference.notificationDeadline = Fecha de notificación
@@ -30,8 +31,14 @@ conference.create = Crear
 conference.back = Atrás
 conference.yes = Si
 conference.no = No
-
+conference.commit.error = Error de transacción
 conference.submission5Days= Filtrar aquellas cuya fecha de presentación transcurrió en los últimos 5 días.
 conference.notification5Days = Filtrar aquellas cuya fecha de notificación transcurrirán  en los próximos 5 días.
 conference.cameraReady5Days =  Filtrar aquellas cuya fecha de publicación transcurrirán  en los próximos 5 días.
 conference.organised5Days = Filtrar aquellas que van a ser organizadas en los próximos 5 días.
+
+
+conference.form.error.submissionDeadline = The Submission Deadline must be before the notification deadline, before the camera-ready Deadline , before the start date and before the endDate
+conference.form.error.notificationDeadline = The notification Deadline must be before the camera-ready deadline, before the startDate and before the endDate
+conference.form.error.cameraReadyDeadline = The Camera-Ready Deadline must be before the startDate and before the endDate
+conference.form.error.startDate =  The startDate must be before the endDate
