--- a/Acme-Conference/src/main/webapp/views/report/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/report/messages.properties
@@ -6,13 +6,14 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-message.subject = Subject
-message.body = Body
-message.sender = From
-message.recipients = To
-message.topics = Topics
-message.topic = Topic
-message.messages = Messages
+report.reviewer = Reviewer
+report.submission = Submission
+report.originalityScore = Originality Score
+report.qualityScore = Quality Score
+report.readabilityScore = Readability Score
+report.decision = Decision
 
-message.reply = Reply
-message.back = Back
+report.reports = Reports
+
+report.display = Display
+report.back = Back
