--- a/Acme-Conference/src/main/webapp/views/report/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/report/messages_es.properties
@@ -6,14 +6,14 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-message.subject = Asunto
-message.body = Cuerpo
-message.sender = De
-message.recipients = A
-message.topics = Temas
-message.topic = Tema
-message.messages = Mensajes
+report.reviewer = Revisor
+report.submission = Submission
+report.originalityScore = Originalidad
+report.qualityScore = Calidad
+report.readabilityScore = Legibilidad
+report.decision = Decisión
 
+report.reports = Informes
 
-message.reply = Responder
-message.back = Atrás
+report.display = Mostrar
+report.back = Atrás
