Relación entre Submission y Reviewer arreglada

--- a/Acme-Conference/src/main/webapp/views/message/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/message/messages.properties
@@ -13,6 +13,8 @@ message.recipients = To
 message.topics = Topics
 message.topic = Topic
 message.messages = Messages
+message.moment = Moment
 
+message.display = Display
 message.reply = Reply
 message.back = Back
