--- a/Acme-Conference/src/main/webapp/views/message/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/message/messages_es.properties
@@ -13,7 +13,8 @@ message.recipients = A
 message.topics = Temas
 message.topic = Tema
 message.messages = Mensajes
+message.moment = Momento
 
-
+message.display = Mostrar
 message.reply = Responder
 message.back = Atrás
