Submission(SIN TERMINAR, DETALLES EN DESCRIPCION)
De momento están el create y el list para los author. Falta show y poder updatear el estado de su submission,además de algunos asserts con respecto a la submission deadline en el servicio.

Al final se ha decidido seguir con el diseño de que el "Paper" es creado a la vez que la submission en el mismo form.

Ahora mismo, en la vista de "My submissions" de los authors aparece que no hay ninguna conference disponible porque debe haber conferences con su submission deadline mas lejanas que la fecha actual y estar a final mode. Si nos vamos a admin y editamos una de las 2 conferences del populate y se ponen a final mode, cumplirá las condiciones y aparecerá el boton de crear submissions,por si se quiere testear.

--- a/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
@@ -36,7 +36,7 @@ conference.submission5Days= Filtrar aquellas cuya fecha de presentación transcur
 conference.notification5Days = Filtrar aquellas cuya fecha de notificación transcurrirán  en los próximos 5 días.
 conference.cameraReady5Days =  Filtrar aquellas cuya fecha de publicación transcurrirán  en los próximos 5 días.
 conference.organised5Days = Filtrar aquellas que van a ser organizadas en los próximos 5 días.
-
+conference.createSubmision = Crear una nueva presentación
 
 conference.form.error.submissionDeadline = The Submission Deadline must be before the notification deadline, before the camera-ready Deadline , before the start date and before the endDate
 conference.form.error.notificationDeadline = The notification Deadline must be before the camera-ready deadline, before the startDate and before the endDate
