--- a/Acme-Conference/src/main/webapp/views/conference/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages.properties
@@ -36,7 +36,7 @@ conference.submission5Days= Filter the ones with their submission deadline elaps
 conference.notification5Days = Filter the ones witch its notification deadline will elapse in 5 days or less.
 conference.cameraReady5Days = Filter the ones witch its camera-ready deadline will elapse in 5 days or less.
 conference.organised5Days = Filter the ones that are going to be organised in less than 5 days.
-
+conference.createSubmision = Create a new submission 
 
 conference.form.error.submissionDeadline = The Submission Deadline must be before the notification deadline, before the camera-ready Deadline , before the start date and before the endDate
 conference.form.error.notificationDeadline = The notification Deadline must be before the camera-ready deadline, before the startDate and before the endDate
