Message Controller finished
All methods needed related to Message are completed. The controller is ready to be tested.

--- a/Acme-Conference/src/main/webapp/views/actor/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/actor/messages.properties
@@ -7,16 +7,16 @@
 # http://www.tdg-seville.info/License.html
 
 actor.checkPhone = The introduced number does not match any format, are you sure you want to save it like this?
-actor.name = Name
+actor.name = Name*
 actor.middleName = Middle name
-actor.surname = Surname
+actor.surname = Surname*
 actor.photo = Photo
-actor.email = Email
+actor.email = Email*
 actor.phoneNumber = Phone number
 actor.address = Address
 actor.userAccount = User Account
-actor.userAccount.username = Username
-actor.userAccount.password = Password
+actor.userAccount.username = Username*
+actor.userAccount.password = Password*
 
 actor.edit = Edit profile
 actor.save = Save
@@ -29,3 +29,4 @@ actor.signUp.administrator = Administrator
 actor.commit.error = Cannot commit operation
 
 actor.back.welcome = Back
+actor.required = Required values are indicated with a *
