--- a/Acme-Conference/src/main/webapp/views/message/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/message/messages_es.properties
@@ -15,6 +15,8 @@ message.topic = Tema
 message.messages = Mensajes
 message.moment = Momento
 
+message.save = Enviar
+message.cancel = Cancelar
 message.display = Mostrar
 message.reply = Responder
 message.back = Atrás
