--- a/Acme-Conference/src/main/webapp/views/reviewer/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/reviewer/messages.properties
@@ -6,6 +6,6 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-reviewer.expertise = Reviewer's expertise
+reviewer.expertise = Reviewer's expertise*
 
 report.list = Reports list
