--- a/Acme-Conference/src/main/webapp/views/reviewer/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/reviewer/messages_es.properties
@@ -6,6 +6,6 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-reviewer.expertise = Maestría del revisor
+reviewer.expertise = Maestría del revisor*
 
 report.list = Lista de informes
