--- a/Acme-Conference/src/main/webapp/views/actor/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/actor/messages_es.properties
@@ -7,16 +7,16 @@
 # http://www.tdg-seville.info/License.html
 
 actor.checkPhone = El número introducido no sigue ningun formato.¿Seguro que quiere guardarlo así?
-actor.name = Nombre
+actor.name = Nombre*
 actor.middleName = Segundo nombre
-actor.surname = Apellido
+actor.surname = Apellido*
 actor.photo = Foto
-actor.email = Email
+actor.email = Email*
 actor.phoneNumber = Número de teléfono
 actor.address = Dirección
 actor.userAccount = Cuenta de usuario
-actor.userAccount.username = Nombre de usuario
-actor.userAccount.password = Contraseña
+actor.userAccount.username = Nombre de usuario*
+actor.userAccount.password = Contraseña*
 
 actor.edit = Editar perfil
 actor.save = Guardar
@@ -29,3 +29,4 @@ actor.signUp.administrator = Administrador
 actor.commit.error = No se puede completar la acción
 
 actor.back.welcome = Atrás
+actor.required = Los valores obligatorios son indicados con un *
