--- a/Acme-Conference/src/main/webapp/views/message/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/message/messages.properties
@@ -15,6 +15,8 @@ message.topic = Topic
 message.messages = Messages
 message.moment = Moment
 
+message.save = Send
+message.cancel = Cancel
 message.display = Display
 message.reply = Reply
 message.back = Back
