--- a/Acme-Conference/src/main/webapp/views/conference/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages.properties
@@ -37,6 +37,10 @@ conference.notification5Days = Filter the ones witch its notification deadline w
 conference.cameraReady5Days = Filter the ones witch its camera-ready deadline will elapse in 5 days or less.
 conference.organised5Days = Filter the ones that are going to be organised in less than 5 days.
 conference.createSubmision = Create a new submission 
+conference.submission.update = Accept/Decline Submissions
+conference.noSubmissionsToUpdate = There are no Submissions in "Under-Review" state.
+conference.submissionDeadlineNotElapsed = The submission Deadline hasn't elapsed yet.
+conference.cameraReadyDeadlineElapsed = The Camera-Ready Deadline has elapsed.
 
 conference.form.error.submissionDeadline = The Submission Deadline must be before the notification deadline, before the camera-ready Deadline , before the start date and before the endDate
 conference.form.error.notificationDeadline = The notification Deadline must be before the camera-ready deadline, before the startDate and before the endDate
