--- a/Acme-Conference/src/main/webapp/views/submission/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages.properties
@@ -15,14 +15,20 @@ submission.author = Author
 submission.paper = Paper
 submission.paper.title = Title
 submission.paper.authors = Choose the others authors of the paper
+submission.paper.showAuthors = Authors of the paper:
 submission.paper.summary = Summary
 submission.paper.document = Document
+submission.paper.cameraReady = Is camera-Ready version? 
 submission.filter= Filter
 submission.edit =  Edit
 submission.create = Create
+submission.show = Show
+submission.update = Update paper
 submission.back = Back
 submission.yes = Yes
 submission.no = No
 submission.commit.error = Commit Error
 submission.conference = Conference
+submission.paper.isCameraReady = You can't edit more because the corresponding paper is now camera-Ready
+submission.notUpdatePaper = You can't update the paper if the submission status is not accepted
 submission.conferencesNotAvailable = We're sorry,but right now there isn't any conference with it's submission deadline not elapsed.
