--- a/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
@@ -37,6 +37,10 @@ conference.notification5Days = Filtrar aquellas cuya fecha de notificación trans
 conference.cameraReady5Days =  Filtrar aquellas cuya fecha de publicación transcurrirán  en los próximos 5 días.
 conference.organised5Days = Filtrar aquellas que van a ser organizadas en los próximos 5 días.
 conference.createSubmision = Crear una nueva presentación
+conference.submission.update = Aceptar/Rechazar presentaciones
+conference.noSubmissionsToUpdate = No hay presentaciones en estado "En revisión".
+conference.submissionDeadlineNotElapsed = La fecha límite de presentación no ha vencido aún.
+conference.cameraReadyDeadlineElapsed = La fecha límite de publicación ha expirado.
 
 conference.form.error.submissionDeadline = The Submission Deadline must be before the notification deadline, before the camera-ready Deadline , before the start date and before the endDate
 conference.form.error.notificationDeadline = The notification Deadline must be before the camera-ready deadline, before the startDate and before the endDate
