--- a/Acme-Conference/src/main/webapp/views/submission/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages_es.properties
@@ -15,11 +15,17 @@ submission.author = Autor
 submission.paper = Papel
 submission.paper.title = Título
 submission.paper.authors = Selecciona a los otros autores del papel
+submission.paper.showAuthors = Autores del papel:
 submission.paper.summary = Resumen
 submission.paper.document = Documento
+submission.paper.cameraReady = ¿Es una versión lista para publicación?
 submission.filter= Filtro
 submission.edit =  Editar
 submission.create = Crear
+submission.show = Mostrar
+submission.update = Actualizar papel
+submission.paper.isCameraReady = No puedes editar más el papel porque está en una versión lista para presentación
+submission.notUpdatePaper = No puedes actualizar el papel si el estado de la sumisión no es aceptado
 submission.back = Atrás
 submission.yes = Si
 submission.no = No
