Update to MessageController

--- a/Acme-Conference/src/main/webapp/views/message/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/message/messages.properties
@@ -20,3 +20,6 @@ message.cancel = Cancel
 message.display = Display
 message.reply = Reply
 message.back = Back
+message.delete = Delete
+
+message.systemMessage = System message
