--- a/Acme-Conference/src/main/webapp/views/message/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/message/messages_es.properties
@@ -20,3 +20,6 @@ message.cancel = Cancelar
 message.display = Mostrar
 message.reply = Responder
 message.back = Atrás
+message.delete = Eliminar
+
+message.systemMessage = Mensaje del sistema
