--- a/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
@@ -46,3 +46,4 @@ conference.form.error.submissionDeadline = The Submission Deadline must be befor
 conference.form.error.notificationDeadline = The notification Deadline must be before the camera-ready deadline, before the startDate and before the endDate
 conference.form.error.cameraReadyDeadline = The Camera-Ready Deadline must be before the startDate and before the endDate
 conference.form.error.startDate =  The startDate must be before the endDate
+conference.activities = Activitidades de la conferencia
