--- a/Acme-Conference/src/main/webapp/views/reviewer/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/reviewer/messages.properties
@@ -7,5 +7,6 @@
 # http://www.tdg-seville.info/License.html
 
 reviewer.expertise = Reviewer's expertise*
+reviewer.exampleExpertise = Things like Maths, Science, Physics, Construction...
 
 report.list = Reports list
