--- a/Acme-Conference/src/main/webapp/views/reviewer/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/reviewer/messages_es.properties
@@ -7,5 +7,6 @@
 # http://www.tdg-seville.info/License.html
 
 reviewer.expertise = Maestría del revisor*
+reviewer.exampleExpertise = Cosas como Matemáticas, Física, Ciencia, Construcción...
 
 report.list = Lista de informes
