--- a/Acme-Conference/src/main/webapp/views/submission/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages.properties
@@ -18,6 +18,7 @@ submission.paper.authors = Choose the others authors of the paper
 submission.paper.showAuthors = Authors of the paper:
 submission.paper.summary = Summary
 submission.paper.document = Document
+submission.paper.exampleDocument = Introduce the document like: http://document.pdf
 submission.paper.cameraReady = Is camera-Ready version? 
 submission.filter= Filter
 submission.edit =  Edit
