--- a/Acme-Conference/src/main/webapp/views/submission/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages_es.properties
@@ -18,6 +18,7 @@ submission.paper.authors = Selecciona a los otros autores del papel
 submission.paper.showAuthors = Autores del papel:
 submission.paper.summary = Resumen
 submission.paper.document = Documento
+submission.paper.exampleDocument = Introduzca el documento de la forma: http://documento.pdf
 submission.paper.cameraReady = ¿Es una versión lista para publicación?
 submission.filter= Filtro
 submission.edit =  Editar
