Requisitos 14.3, 14.6(Activities) and 14.8(DashBoard)

--- a/Acme-Conference/src/main/webapp/views/activity/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/activity/messages.properties
@@ -33,3 +33,20 @@ activity.type.panels = Panels
 activity.create.presentation = Create a new Presentation for this conference
 activity.create.tutorial = Create a new Tutorial for this conference
 activity.create.panel = Create a new Panel for this conference
+activity.commit.error = Commit Error
+activity.noPapers = You can't create a presentation because there are no accepted papers available
+activity.paper.authors = Choose the others authors of the paper
+activity.paper.showAuthors = Authors of the paper:
+activity.paper.summary = Summary
+activity.paper.document = Document
+activity.paper.cameraReady = Is camera-Ready version? 
+activity.showPaper = This is the paper asociated:
+activity.schedule = Schedule:
+activity.finishHour = Time it finish:
+activity.delete = Delete
+activity.section.title = Title
+activity.section.summary = Summary
+activity.section.pictures = Pictures
+activity.addSections = Add Sections
+activity.cantAddActivities = You can't add more activities because the startDate from the conference has elapsed
+activity.cantAddSections = You can't add more sections to the presentation because the startDate from the conference has elapsed
