--- a/Acme-Conference/src/main/webapp/views/activity/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/activity/messages_es.properties
@@ -33,3 +33,20 @@ activity.type.panels = Debates
 activity.create.presentation = Crear una nueva presentación para esta conferencia
 activity.create.tutorial = Crear un nuevo tutorial para esta conferencia
 activity.create.panel = Crear un nuevo debate para esta conferencia
+activity.commit.error = Error de transacción
+activity.noPapers = No puedes crear una presentación porque no hay papeles aceptados disponibles
+activity.paper.authors = Selecciona a los otros autores del papel
+activity.paper.showAuthors = Autores del papel:
+activity.paper.summary = Resumen
+activity.paper.document = Documento
+activity.paper.cameraReady = ¿Es una versión lista para publicación?
+activity.showPaper = Este es el papel asociado:
+activity.schedule = Horario:
+activity.finishHour = Momento en que acaba:
+activity.delete = Borrar
+activity.section.title = Titulo
+activity.section.summary = Resumen
+activity.section.pictures = Imágenes
+activity.addSections = Añadir secciones
+activity.cantAddActivities = No puedes añadir más actividades porque la fecha de estreno de la conferencia ya ha pasado
+activity.cantAddSections = No puedes añadir más secciones a la presentación porque la fecha de estreno de la conferencia ya ha pasado
