--- a/Acme-Conference/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages.properties
@@ -9,6 +9,8 @@
 master.page.administrator			= Administrator
 master.page.administrator.action.1	= Action 1
 master.page.administrator.action.2	= Action 2
+master.page.administrator.dashboard	= Dashboard
+
 
 master.page.author				= Author
 master.page.author.submissions = My Submissions
@@ -23,3 +25,4 @@ master.page.logout 					= Logout
 
 master.page.conferences = Conferences 
 master.page.admin.conferences = Manage conferences
+master.page.administrator.dashboard	= Dashboard
