--- a/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
@@ -23,4 +23,5 @@ master.page.login 					= Entrar
 master.page.logout 					= Salir
 
 master.page.conferences = Conferencias
-master.page.admin.conferences = Administrar conferences
+master.page.admin.conferences = Administrar conferencias
+master.page.administrator.dashboard	= Dashboard
