--- a/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
@@ -41,9 +41,10 @@ conference.submission.update = Aceptar/Rechazar presentaciones
 conference.noSubmissionsToUpdate = No hay presentaciones en estado "En revisión".
 conference.submissionDeadlineNotElapsed = La fecha límite de presentación no ha vencido aún.
 conference.cameraReadyDeadlineElapsed = La fecha límite de publicación ha expirado.
-
-conference.form.error.submissionDeadline = The Submission Deadline must be before the notification deadline, before the camera-ready Deadline , before the start date and before the endDate
-conference.form.error.notificationDeadline = The notification Deadline must be before the camera-ready deadline, before the startDate and before the endDate
-conference.form.error.cameraReadyDeadline = The Camera-Ready Deadline must be before the startDate and before the endDate
-conference.form.error.startDate =  The startDate must be before the endDate
+conference.form.error.submissionDeadline = The Submission Deadline must be in future and before the notification deadline, before the camera-ready Deadline , before the start date and before the endDate
+conference.form.error.notificationDeadline = The notification Deadline must be in future before the camera-ready deadline, before the startDate and before the endDate
+conference.form.error.cameraReadyDeadline = The Camera-Ready Deadline must be in future and before the startDate and before the endDate
+conference.form.error.startDate =  The startDate must be in future and before the endDate
+conference.form.error.endDate =  The endDate must be in future
 conference.activities = Activitidades de la conferencia
+conference.submissionList = Sumisiones de la conferencia
