--- a/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
@@ -12,7 +12,7 @@ master.page.administrator.action.2	= Acción 2
 
 master.page.author				= Autor
 master.page.author.submissions = Mis presentaciones
-
+master.page.author.registrations = My registros
 
 master.page.profile 				= Perfil
 master.page.profile.action.1 		= Acción 1
