--- a/Acme-Conference/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages.properties
@@ -14,6 +14,7 @@ master.page.administrator.dashboard	= Dashboard
 
 master.page.author				= Author
 master.page.author.submissions = My Submissions
+master.page.author.registrations = My registrations
 
 master.page.profile 				= Profile
 master.page.profile.action.1 		= Action 1
