primeros arreglos hacking URLs

--- a/Acme-Conference/src/main/webapp/views/conference/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages.properties
@@ -41,11 +41,13 @@ conference.submission.update = Accept/Decline Submissions
 conference.noSubmissionsToUpdate = There are no Submissions in "Under-Review" state.
 conference.submissionDeadlineNotElapsed = The submission Deadline hasn't elapsed yet.
 conference.cameraReadyDeadlineElapsed = The Camera-Ready Deadline has elapsed.
+conference.cantEditFinal = You can't edit anymore the conference because now is in final mode.
 
 conference.form.error.submissionDeadline = The Submission Deadline must be in future and before the notification deadline, before the camera-ready Deadline , before the start date and before the endDate
 conference.form.error.notificationDeadline = The notification Deadline must be in future before the camera-ready deadline, before the startDate and before the endDate
 conference.form.error.cameraReadyDeadline = The Camera-Ready Deadline must be in future and before the startDate and before the endDate
 conference.form.error.startDate =  The startDate must be in future and before the endDate
 conference.form.error.endDate =  The endDate must be in future
+conference.form.error.alreadyFinalMode =  This conference was already setted as final mode,so you can't modify it anymore
 conference.activities = Activities from this conference
 conference.submissionList = Submissions from the conference
