--- a/Acme-Conference/src/main/webapp/views/submission/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages.properties
@@ -40,3 +40,4 @@ submission.assignAutomatic = Assing automatically the reviewers to the submissio
 submission.assign = Assign reviewer
 submission.reviewers = These are the reviewers:
 submission.chooseReviewers: Choose a reviewer to add to the submission
+submission.error.noConferences = You can't create a submission because there isn't any conference in final mode with the submission deadline not elapsed.
