--- a/Acme-Conference/src/main/webapp/views/submission/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages_es.properties
@@ -40,3 +40,6 @@ submission.assignAutomatic = Asignar automáticamente a los revisores
 submission.assign = Assignar revisor
 submission.reviewers = Estos son los revisores:
 submission.chooseReviewers: Elige un revisor para añadir a la sumisión
+
+
+submission.error.noConferences = You can't create a submission because there isn't any conference in final mode with the submission deadline not elapsed.
