Added extra requirements that were left to do
Configuartion Parameters added and Topic too
Also, buttons on the header added. Testing pending

--- a/Acme-Conference/src/main/webapp/views/actor/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/actor/messages.properties
@@ -30,3 +30,4 @@ actor.commit.error = Cannot commit operation
 
 actor.back.welcome = Back
 actor.required = Required values are indicated with a *
+actor.confirm.phone = The phone number entered does not follow the usual format. Do you want to use this phone anyway?
