--- a/Acme-Conference/src/main/webapp/views/actor/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/actor/messages_es.properties
@@ -30,3 +30,4 @@ actor.commit.error = No se puede completar la acción
 
 actor.back.welcome = Atrás
 actor.required = Los valores obligatorios son indicados con un *
+actor.confirm.phone = El número de teléfono introducido no sigue el formato usual. ¿Quiere usarlo de todas formas?
