--- a/Acme-Conference/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages.properties
@@ -17,6 +17,9 @@ master.page.logout 					= Logout
 master.page.profile = Profile
 master.page.editProfile = Edit profile
 
+master.page.administrator.confParams = Configuration Parameters
+master.page.administrator.topics = Topics
+
 master.page.messages = Messages
 master.page.listMessages = List messages
 master.page.sendMessage = Send message
