--- a/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
@@ -17,6 +17,9 @@ master.page.logout 					= Salir
 master.page.profile = Perfil
 master.page.editProfile = Editar perfil
 
+master.page.administrator.confParams = Parámetros de configuración del sistema
+master.page.administrator.topics = Topics
+
 master.page.messages = Mensajes
 master.page.listMessages = Listar mensajes
 master.page.sendMessages = Enviar mensaje
