Arreglos Varios(Hacking y cosas que pueden provocar panic)

--- a/Acme-Conference/src/main/webapp/views/activity/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/activity/messages.properties
@@ -49,4 +49,16 @@ activity.section.summary = Summary
 activity.section.pictures = Pictures
 activity.addSections = Add Sections
 activity.cantAddActivities = You can't add more activities because the startDate from the conference has elapsed
+activity.cantAddActivitiesSorry = Sorry,but u can't create an activity, the conference has already started.
 activity.cantAddSections = You can't add more sections to the presentation because the startDate from the conference has elapsed
+activity.error.noPapersAvailable = We're sorry,but there aren't any accepted papers to this conference in this moment,so you can't create a presentation
+
+activity.error.OnlySectionsToTutorials = You can't add sections to a activity that is not a tutorial
+activity.error.StartDateExpired = You can't add a section because the startDate of the conference has expired
+activity.cantDeleteActivities = You can't delete the activities because the startDate from the conference has elapsed
+activity.alreadyTakenPlace = You can't delete the activity because it's conference has already started or taken place
+activity.betweenStartAndEndDate =  The startMoment must be between the startDate and the endDate of the conference
+activity.durationShorterThanConference =  The duration must be shorter than the conference total duration(From its startDate to it's EndDate)
+activity.cantEditActivitiesSorry = Sorry,but u can't edit an activity, the conference has already started.
+activity.cantDeleteActivitiesSorry = Sorry,but u can't delete an activity, the conference has already started.
+activity.canOnlyDeleteActivittiesFromConference = You can only delete activities from the corresponding conference
