--- a/Acme-Conference/src/main/webapp/views/activity/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/activity/messages_es.properties
@@ -49,4 +49,16 @@ activity.section.summary = Resumen
 activity.section.pictures = Imágenes
 activity.addSections = Añadir secciones
 activity.cantAddActivities = No puedes añadir más actividades porque la fecha de estreno de la conferencia ya ha pasado
+activity.cantAddActivitiesSorry = Lo sentimos, no puede añadir más actividades, la conferencia ya ha empezado.
 activity.cantAddSections = No puedes añadir más secciones a la presentación porque la fecha de estreno de la conferencia ya ha pasado
+activity.error.noPapersAvailable = Lo sentimos,pero no hay ningún papel aceptado ahora mismo para esta conferencia, por lo que no puede crear una presentación.
+
+activity.error.OnlySectionsToTutorials = No puedes añadir Secciones a una actividad que no es un tutorial
+activity.error.StartDateExpired = No puedes añadir una sección porque la conferencia ya ha empezado
+activity.cantDeleteActivities = No puedes borrar actividades porque la conferencia ya ha empezado
+activity.alreadyTakenPlace = No puedes borrar la actividad porque ya ha comenzado la conferencia
+activity.betweenStartAndEndDate =  El momento de comienzo debe estar entre la fecha de comienzo y la de fin de la conferencia
+activity.durationShorterThanConference =  La duración de la actividad debe ser menor que la de la conferencia(Desde su fecha de comienzo hasta la de fin de esta).
+activity.cantEditActivitiesSorry = Lo sentimos,no puedes editar actividades porque la conferencia ya ha empezado.
+activity.cantDeleteActivitiesSorry = Lo sentimos,no puedes borrar una actividad porque la conferencia ya ha comenzado
+activity.canOnlyDeleteActivittiesFromConference = Solo puedes borrar actividades de la conferencia correspondiente
