--- a/Acme-Conference/src/main/webapp/views/conference/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages.properties
@@ -51,3 +51,6 @@ conference.form.error.endDate =  The endDate must be in future
 conference.form.error.alreadyFinalMode =  This conference was already setted as final mode,so you can't modify it anymore
 conference.activities = Activities from this conference
 conference.submissionList = Submissions from the conference
+conference.cantUpdate.submissionDeadlineNotElased = You can't update the status of the submissions of this conference because it's submission deadline hasn't expired yet.
+conference.cantUpdate.cameraReadyDeadlineElapsed = You can't update the status of the submissions of this conference because it's camera-ready deadline has expired.
+conference.cantUpdate.NoUnderReviewSubmissions = You can't update the status of the submissions of this conference because it hasn't got any of them in "UNDER-REVIEW" state.
