--- a/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
@@ -50,3 +50,7 @@ conference.form.error.endDate =  The endDate must be in future
 conference.form.error.alreadyFinalMode =  This conference was already setted as final mode,so you can't modify it anymore
 conference.activities = Activitidades de la conferencia
 conference.submissionList = Sumisiones de la conferencia
+
+conference.cantUpdate.submissionDeadlineNotElased = No puedes actualizar el estado de las sumisiones de esta conferencia porque su fecha de sumisión aun no ha expirado.
+conference.cantUpdate.cameraReadyDeadlineElapsed = No puedes actualizar el estado de las sumisiones de esta conferencia porque su fecha de publicación ha expirado.
+conference.cantUpdate.NoUnderReviewSubmissions = No puedes actualizar el estado de las sumisiones de esta conferencia porque ninguna está con un estado "UNDER-REVIEW"(Bajo revisión).
