--- a/Acme-Conference/src/main/webapp/views/submission/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages.properties
@@ -41,3 +41,11 @@ submission.assign = Assign reviewer
 submission.reviewers = These are the reviewers:
 submission.chooseReviewers: Choose a reviewer to add to the submission
 submission.error.noConferences = You can't create a submission because there isn't any conference in final mode with the submission deadline not elapsed.
+
+submission.editPaperError.cameraReadyDeadlineElapsed = You can't edit the paper because the corresponding conference has the cámeraReady Deadline elapsed.
+submission.editPaperError.submissionDeadlineNotElapsed = You can't edit the paper because the corresponding conference has the submission Deadline not elapsed.
+submission.editPaperError.submissionNotAccepted = You can't edit the paper because the corresponding Submission is not Accepted.
+submission.editPaperError.notPaperAuthor = You can't edit the paper because you are not an author from the paper.
+submission.editPaperError.paperAlreadyCameraReady = You can't edit more the paper because it's already in Camera-Ready State.
+submission.editPaperError.NotSubmissionAuthor = You can't edit the paper because you aren't the author of the Submission.
+
