--- a/Acme-Conference/src/main/webapp/views/submission/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages_es.properties
@@ -42,4 +42,11 @@ submission.reviewers = Estos son los revisores:
 submission.chooseReviewers: Elige un revisor para añadir a la sumisión
 
 
-submission.error.noConferences = You can't create a submission because there isn't any conference in final mode with the submission deadline not elapsed.
+submission.error.noConferences = No puedes crear una sumisión porque no hay ninguna conferencia aceptada con la fecha de sumisión sin expirar .
+
+submission.editPaperError.cameraReadyDeadlineElapsed = No puedes editar el papel porque la conferencia correspondiente tiene la fecha de publicación explirada.
+submission.editPaperError.submissionDeadlineNotElapsed = No puedes editar el papel porque la conferencia correspondiente no tiene la fecha de sumisión explirada.
+submission.editPaperError.submissionNotAccepted = No puedes editar el papel porque la sumisión correspondiente no está aceptada.
+submission.editPaperError.notPaperAuthor = No puedes editar el papel porque no eres uno de sus autores.
+submission.editPaperError.paperAlreadyCameraReady = No puedes editar más el papel porque ya está en una versión lista para publicación.
+submission.editPaperError.NotSubmissionAuthor = No puedes editar el papel correspondiente porque no eres el autor de la correspondiente sumisión.
