--- a/Acme-Conference/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages.properties
@@ -18,11 +18,17 @@ master.page.profile = Profile
 master.page.editProfile = Edit profile
 
 master.page.administrator.confParams = Configuration Parameters
+master.page.confParamsEdit = Edit Configuration Parameters
 master.page.administrator.topics = Topics
 
 master.page.messages = Messages
 master.page.listMessages = List messages
 master.page.sendMessage = Send message
+
+master.page.adminMessage = Admin Messages
+master.page.broadcast = Broadcast
+master.page.broadcastToAuthors = Broadcast to Authors
+
 
 master.page.conferences = Conferences 
 master.page.admin.conferences = Manage conferences
