--- a/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
@@ -18,11 +18,16 @@ master.page.profile = Perfil
 master.page.editProfile = Editar perfil
 
 master.page.administrator.confParams = Parámetros de configuración del sistema
+master.page.confParamsEdit = Editar parámetros de configuración
 master.page.administrator.topics = Topics
 
 master.page.messages = Mensajes
 master.page.listMessages = Listar mensajes
 master.page.sendMessages = Enviar mensaje
+
+master.page.adminMessage = Mensajes de Administrador
+master.page.broadcast = Broadcast
+master.page.broadcastToAuthors = Broadcast para autores
 
 master.page.conferences = Conferencias
 master.page.admin.conferences = Administrar conferencias
